k8s/smb/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: notiflex-api
  namespace: notiflex
  labels:
    app: notiflex-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notiflex-api
  template:
    metadata:
      labels:
        app: notiflex-api
    spec:
      containers:
      - name: api
        image: asia-northeast3-docker.pkg.dev/ssw-gitaiops-project/notiflex/api:sha-244d79d5ecc4a9b1b7d3fc2545897ba9b6b5d57d
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
  strategy:
    blueGreen:
      activeService: notiflex-api
      previewService: notiflex-api-preview
      autoPromotionEnabled: true
      autoPromotionSeconds: 30
